# Remember0416

./: .gitignore  Cargo.toml  README.md  app.manifest  build.bat  build.rs  build_for_setup.bat  clean.bat  go.mod  go.sum  iconwin.go  main.go  setup_script.iss
bindings/: Cargo.toml  build.rs
setup/: setup_script.iss
src/: main.rs  toast.rs  tray.rs
systray/: systray.go  systray_windows.go
toast/: toast.go
